tests-integration/fixtures/checking/020_type_operator_chain_kind_error/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms

Types
Add :: Type -> Type -> Type
+ :: Type -> Type -> Type
Bad :: Type

Synonyms
type Add a b = (a :: Type)
type Bad = Add Int "hello"

Diagnostics
error[CannotUnify]: Cannot unify 'Symbol' with 'Type'
  --> 8:18..8:25
  |
8 | type Bad = Int + "hello"
  |                  ^~~~~~~
